welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:-10: error: Unmatched closing brace '}' ignored here
	}
        ^RunHalf:-9: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^RunHalf:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^